# wartungsplan

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  README.md  convert.sh  dev-requirements.txt  exchange.conf.sample  plan.conf.sample  pyproject.toml  requirements.txt  wartungsplan-example.service  wartungsplan-example.timer
.github/workflows/: testsuite.yml
src/: Wartungsplan.py  __init__.py  addEventToIcal.py  downloadExchange.py
systemd/: mondays@.timer  wartungsplan-example.service  wartungsplan-example.timer
test/: test.py
test/test-data/: Empty-Event-2023-05-01.ics  Every2ndTuesday-2023-05-02.ics  EveryDayExcept-2023-09-26.ics  EveryDayWithHeavyHTML.ics  OutlookCalendar-2023-10-06.ics  TimezoneBangkok3rdOr4th-05-2023.ics
tools/: downloadExchange.py  downloadExchange2.py  exchange.conf.sample
