[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Wartungsplan"
version = "0.3"
description = "Manage recurring tasks in ical"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPLv3"}
authors = [
    {name = "Felix Bauer", email = "felix.bauer@atos.net"},
]
maintainers = [
    {name = "Felix Bauer", email = "felix.bauer@eviden.com"},
    {name = "Christian Habrom", email = "christian.habrom@eviden.com"},
]

dependencies = [
	"icalendar==5.0.10",
	"python_dateutil==2.8.2",
	"recurring_ical_events==2.1.0",
	"Requests==2.29.0",
	"importlib-metadata==6.8.0",
]

[project.optional-dependencies]
otrs = ["pyotrs==1.0.1"]

[project.urls]
repository = "https://github.com/science-computing/wartungsplan"

[project.scripts]
Wartungsplan = "Wartungsplan:main"
addEventToIcal = "addEventToIcal:main"
