[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Wartungsplan"
version = "1.0rc1"
description = "Manage recurring tasks in ical"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}
authors = [
    {name = "Felix Bauer", email = "felix.bauer@atos.net"},
]
maintainers = [
    {name = "Felix Bauer", email = "felix.bauer@eviden.com"},
    {name = "Christian Habrom", email = "christian.habrom@eviden.com"},
]

dependencies = [
        "icalendar==5.0.13",
        "python-dateutil==2.9.0",
        "recurring-ical-events==2.2.3",
        "requests==2.32.3",
        "importlib_metadata==8.0.0",
]

[project.optional-dependencies]
otrs = [
	"pyotrs==1.4.0",
	"exchangelib==5.4.1"
]

[project.urls]
repository = "https://github.com/science-computing/wartungsplan"

[project.scripts]
Wartungsplan = "Wartungsplan:main"
addEventToIcal = "addEventToIcal:main"
downloadExchange = "downloadExchange:main"
